--- a/roles/dotfiles_clone/tasks/main.yml
+++ b/roles/dotfiles_clone/tasks/main.yml
@@ -19,7 +19,7 @@
   become: true
   become_user: "{{ user }}"
   git:
-    repo: ssh://git@gt.{{ domain }}:1108/subract/dotfiles.git
+    repo: ssh://git@gt.{{ domain }}:1108/subract/dotfiles.git # noqa latest
     dest: /home/{{ user }}/.dotfiles
 
 - name: Revert SSH agent socket owner
