Update user/group role, update NFS exports
I want to get away from using `no_root_squash`, so I'm starting to actually
figure out how NFS handles users. Users with corresponding UIDs and GIDs are
now created on the server and the clients for use with NFS.

--- a/host_vars/gaming.yml
+++ b/host_vars/gaming.yml
@@ -1,3 +1,14 @@
 ---
 # NFS directories mounted on file server
 nfs_dirs: [/ssd/app/games, /ssd/dmz/app]
+# Users/groups for nfs server
+custom_groups:
+  - name: dmz-doc
+    gid: 2010
+custom_users:
+  - name: dmz-doc
+    create_home: false
+    uid: 2010
+    groups: dmz-doc
+  - name: aven
+    groups: dmz-doc
