--- a/roles/more_users/tasks/main.yml
+++ b/roles/more_users/tasks/main.yml
@@ -1,10 +1,21 @@
 ---
-- name: Add more sudo users
+- name: Add more groups
+  tags: users, groups, config
+  group:
+    name: "{{ item.name }}"
+    gid: "{{ item.gid | default(omit) }}"
+  loop: "{{ custom_groups }}"
+  when: custom_groups is defined
+
+- name: Add more users
   tags: users, config
   user:
     name: "{{ item.name }}"
-    group: sudo
-  loop: "{{ users }}"
+    groups: "{{ item.groups | default(omit) }}"
+    uid: "{{ item.uid | default(omit) }}"
+    create_home: "{{ item.create_home | default(True) }}"
+  loop: "{{ custom_users }}"
+  when: custom_users is defined
 
 - name: Set user authorized keys
   tags: users, config
@@ -12,4 +23,5 @@
     user: "{{ item.name }}"
     state: present
     key: "{{ item.key }}"
-  loop: "{{ users }}"
+  loop: "{{ custom_users }}"
+  when: item.key is defined
