Add hedgedoc, mariadb, keycloak
A big step forward for the homelab - publically hosted HTTP(S)-based services.

Still working on getting Keycloak all set up - in particular, disallowing
access to the admin panel from non-whitelisted IPs with traefik.

--- a/host_vars/draco.yml
+++ b/host_vars/draco.yml
@@ -40,4 +40,4 @@ custom_users:
     uid: 2010
     groups: dmz-doc
   - name: aven
-    groups: [dmz-doc, apps-doc]
+    groups: [dmz-doc, apps-doc, sudo]
