--- a/roles/docker/templates/gaming-compose.yml
+++ b/roles/docker/templates/gaming-compose.yml
@@ -1,5 +1,8 @@
-version: '3.7'
+version: "3.7"
 
+networks:
+  web:
+  db:
 
 services:
   mc-survival-3:
@@ -10,20 +13,26 @@ services:
     ports:
       - 25568:25565
 
+    networks:
+      - web
+
     volumes:
-      - '/ssd/app/games/minecraft/mc-survival-211205-1.18.0:/data'
+      - /ssd/app/games/minecraft/mc-survival-211205-1.18.0:/data
 
     environment:
-      TZ: 'America/Chicago'
-      EULA: 'True'
-      PVP: 'false'
-      DIFFICULTY: 'normal'
-      SERVER_NAME: 'Haven Grotto'
+      TZ: America/Chicago
+      EULA: True
+      PVP: false
+      DIFFICULTY: normal
+      SERVER_NAME: Haven Grotto
       OPS: ${MINECRAFT_OP}
-      MEMORY: '3G'
-      MOTD: 'Haven Grotto'
-      TYPE: 'FORGE'
-      VERSION: '1.18.2'
+      MEMORY: 3G
+      MOTD: Haven Grotto
+      TYPE: FORGE
+      VERSION: 1.18.2
+
+    labels:
+      traefik.enable: false
 
   mc-survival-4:
     container_name: mc-survival-4
@@ -33,21 +42,27 @@ services:
     ports:
       - 25569:25565
 
+    networks:
+      - web
+
     volumes:
-      - '/ssd/app/games/minecraft/mc-survival-221003-1.19.2:/data'
+      - /ssd/app/games/minecraft/mc-survival-221003-1.19.2:/data
 
     environment:
-      TZ: 'America/Chicago'
-      EULA: 'True'
-      PVP: 'false'
-      DIFFICULTY: 'normal'
-      SERVER_NAME: 'Boulder Keep'
+      TZ: America/Chicago
+      EULA: True
+      PVP: false
+      DIFFICULTY: normal
+      SERVER_NAME: Boulder Keep
       OPS: ${MINECRAFT_OP}
-      MEMORY: '3G'
-      MOTD: 'Boulder Keep'
-      TYPE: 'FORGE'
-      VERSION: '1.19.2'
-      VIEW_DISTANCE: '24'
+      MEMORY: 3G
+      MOTD: Boulder Keep
+      TYPE: FORGE
+      VERSION: 1.19.2
+      VIEW_DISTANCE: 24
+
+    labels:
+      traefik.enable: false
 
   factorio:
     container_name: factorio
@@ -58,34 +73,120 @@ services:
       - 34197:34197/udp
       - 27015:27015/tcp
 
+    networks:
+      - web
+
     volumes:
       - /ssd/app/games/factorio/loriini:/factorio
 
     environment:
-      UPDATE_MODS_ON_START: 'false'
-      SAVE_NAME: "Loriini"
+      UPDATE_MODS_ON_START: false
+      SAVE_NAME: Loriini
 
-  postgres:
-    container_name: postgres
-    image: postgres:13.4-alpine
-    environment:
-      - POSTGRES_USER=hedgedoc
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=hedgedoc
+    labels:
+      traefik.enable: false
+
+  traefik:
+    container_name: traefik
+    image: traefik:latest
     restart: unless-stopped
+    command: --providers.docker
+
+    ports:
+      - 80:80
+      - 443:443
+
+    networks:
+      - web
+
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /ssd/dmz/app/traefik/traefik.yml:/traefik.yml
+      - /ssd/dmz/app/traefik/acme.json:/acme.json
+      - /etc/localtime:/etc/localtime:ro
+
+    labels:
+      traefik.enable: false
 
   hedgedoc:
     image: lscr.io/linuxserver/hedgedoc:latest
     container_name: hedgedoc
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Chicago
-      - CMD_DOMAIN=hd.{{domain}}
-      - CMD_URL_ADDPORT=true #optional
-      - CMD_PROTOCOL_USESSL=false #optional
-      - CMD_PORT=3000 #optional
-      - CMD_ALLOW_ORIGIN=['hd.{{domain}}'] #optional
-    ports:
-      - 3000:3000
     restart: unless-stopped
+
+    environment:
+      PUID: 2010
+      PGID: 2010
+      TZ: America/Chicago
+      CMD_DOMAIN: hd.{{domain}}
+      CMD_PROTOCOL_USESSL: true
+      CMD_ALLOW_ORIGIN: "[hd.{{domain}}]" #optional
+      CMD_ALLOW_ANONYMOUS: false
+      CMD_DEFAULT_PERMISSION: limited
+      CMD_ALLOW_EMAIL_REGISTER: false
+
+    volumes:
+      - /ssd/dmz/app/hedgedoc:/config
+
+    networks:
+      - web
+
+    labels:
+      traefik.enable: true
+      traefik.http.routers.hd.rule: Host(`hd.{{ domain }}`)
+      traefik.http.routers.hd.entrypoints: https
+      traefik.http.routers.hd.tls.certresolver: default
+      traefik.http.services.hd.loadbalancer.server.port: 3000
+
+  mariadb:
+    container_name: mariadb
+    image: mariadb:10
+    restart: unless-stopped
+    user: 2010:2010
+
+    environment:
+      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+    
+    volumes:
+      - /ssd/dmz/app/mariadb:/var/lib/mysql
+
+    networks:
+      - db
+
+    labels:
+      traefik.enable: false
+
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:latest
+    restart: unless-stopped
+    command: start
+
+    depends_on:
+      - mariadb
+
+    environment:
+      KC_HOSTNAME: kc.{{ domain }} 
+      KC_PROXY: edge
+      KEYCLOAK_ADMIN: aven
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KC_DB: mariadb
+      KC_DB_URL_HOST: mariadb
+      KC_DB_URL_PORT: 3306
+      KC_DB_URL_DATABASE: keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: ${KC_DB_PASSWORD}
+
+    networks:
+      - web
+      - db
+
+    labels:
+      traefik.enable: true
+      traefik.http.routers.kc.rule: Host(`kc.{{ domain }}`)
+      traefik.http.routers.kc.entrypoints: https
+      traefik.http.routers.kc.tls.certresolver: default
+      traefik.http.services.kc.loadbalancer.server.port: 8080
+      # traefik.http.routers.kc-admin.rule: (Host(`kc.{{ domain }}`) && PathPrefix(`/admin/`))
+      # traefik.http.routers.kc-admin.entrypoints: https
+      # traefik.http.middlewares.kc-admin-ipwhitelist.ipwhitelist.sourcerange: "10.0.0.0"
+      # traefik.http.routers.kc-admin.middlewares: kc-admin-ipwhitelist
