--- a/host_vars/dmz-apps.yml
+++ b/host_vars/dmz-apps.yml
@@ -1,6 +1,12 @@
 ---
 # NFS directories mounted on file server
-nfs_dirs: [/ssd/app/games, /ssd/dmz/app]
+nfs_dirs:
+  - path: /ssd/dmz/app
+    user: dmz-doc
+    group: dmz-doc
+  - path: /ssd/app/games
+    user: root
+    group: root
 # Users/groups for nfs server
 custom_groups:
   - name: dmz-doc
