--- a/host_vars/seedling.yml
+++ b/host_vars/seedling.yml
@@ -1,3 +1,6 @@
 ---
 # NFS directories mounted on file server
-nfs_dirs: [/ssd/app/deluge]
+nfs_dirs:
+  - path: /ssd/app/deluge,
+    user: root
+    group: root
