--- a/roles/docker/templates/lyra-compose.yml
+++ b/roles/docker/templates/lyra-compose.yml
@@ -28,7 +28,7 @@ services:
 
   graylog:
     container_name: graylog
-    image: "graylog/graylog:4.3.3"
+    image: "graylog/graylog:4.3"
     restart: unless-stopped
     depends_on:
       elasticsearch:
@@ -49,6 +49,7 @@ services:
     ports:
     - "514:5140/udp"   # Syslog
     - "514:5140/tcp"   # Syslog
+    - "12201:12201/udp"   # GELF
     - "80:9000/tcp"   # Server API
 
     volumes:
