Split workstation packages, fix directory creation
I need to use more `include_tasks:` around to clean up many of the files. I
added a number of directory creations, after discovering they were needed
while reinstalling titania

--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -42,140 +42,8 @@
     enabled: true
     state: started
 
-- name: Install workstation software packages
-  tags: pkg, update
-  package:
-    name:
-      # User apps
-      - audacity # audio editor
-      - code # de-Microsofted VS Code fork
-      - digikam # photo manager
-      - discord # social client
-      - firefox # web browser
-      - gimp # image editor
-      - keepassxc # password manager
-      - libreoffice-fresh # office software
-      - musescore # sheet music editor
-      - nextcloud-client # file synchronization
-      - nitrogen # background manager
-      - obsidian # notes
-      - obs-studio # screen recorder
-      - libqalculate # CLI calculator
-      - redshift # blue light reducer
-      - signal-desktop # messenger
-      - steam # games
-      - thunar # file browser
-      - thunar-archive-plugin # archive support
-      - thunar-volman # removable media management
-      - thunderbird # email
-      - tldr # concise, useful manpages
-      - tmux # terminal multiplexer
-      - transmission-gtk # torrent client
-      - veracrypt # file encryption
-      - vim # vim
-      - vim-ansible # ansible highlighting
-      - virt-viewer # SPICE client
-      - vlc # media player
-      - youtube-dl # youtube downloader
-
-      # System utilities
-      - ansible # config manager
-      - ark # archive manager
-      - baobab # disk usage analyser
-      - bat # better cat
-      - cowsay # cowsay
-      - dnsutils # dig
-      - docker # containers
-      - docker-compose # container management
-      - duf # better df
-      - eog # image viewer
-      - fd # better find
-      - fzf # fuzzy find
-      - git # git
-      - git-lfs # large file support
-      - hexyl # better xxd
-      - iftop # network monitor
-      - maim # screenshot utility
-      - man-db # need men
-      - gnu-netcat # netcat
-      - networkmanager # network manager
-      - nmap # network mapper
-      - nvidia # proprietary drivers
-      - nvidia-settings # X server settings
-      - nvtop # GPU monitor
-      - kitty # terminal emulator
-      - neofetch # OS info
-      - perl-image-exiftool # metadata parser
-      - pv # progress viewer
-      - reflector # pacman mirror manager
-      - rkhunter # rootkit hunter
-      - rsync # copy files in style
-      - seahorse # keyring viewer
-      - tcpdump # peep some packets
-      - testdisk # data recovery
-      - traceroute # traceroute
-      - tree # directory viewer
-      - unzip # unzips
-      - wireshark-qt # protocol analyzer
-      - xorg-xev # view key events
-      - zip # zips
-
-      # Helpers and styling
-      - ansible-lint # ansible linting
-      - base-devel # needed for AUR
-      - bluez # bluetooth
-      - bluez-utils # includes cli management
-      - breeze-icons # icon theme
-      - ccid # smart card driver
-      - dunst # notification daemon
-      - file-roller # archive support for thunar
-      - freetype2 # font rendering
-      - gnome-keyring # keyring
-      - gvfs # removable storage mounting
-      - network-manager-applet # tray icon, ProtonVPN dependency
-      - noto-fonts-emoji # emojis
-      - nss-mdns # mdns name resolution
-      - opensc # smart card libraries
-      - pasystray # PulseAudio tray icon
-      - pavucontrol # PulseAudio volume control
-      - pipewire # modern sound
-      - pipewire-pulse # replace PuleAudio
-      - ttf-fira-code # nice font
-      - tumbler # thumbnails for thunar
-      - wireplumber # audio session manager
-      - xclip # interact with clipboard from terminal
-
-- name: Install yay
-  tags: pkg, aur, update
-  become: false
-  kewlfft.aur.aur:
-    name:
-      - yay # AUR manager
-
-- name: Install AUR packages
-  tags: pkg, aur, update
-  become: false
-  kewlfft.aur.aur:
-    name:
-      - appimagelauncher # launcher for appimages
-      - autotiling # i3 window tiling
-      - brother-hll2350dw # print drivers
-      - bfg # clean git repos
-      - catppuccin-gtk-theme-macchiato # gtk theme
-      - git-secrets # dirty word monitoring
-      - i3lock-multimonitor # mutimonitor support for i3lock
-      - magic-wormhole # file transfer
-      - multimc5 # Minecraft launcher
-      - protonmail-bridge # allows local use of ProtonMail
-      - protonvpn # ProtonVPN CLI and GUI
-      - refind-theme-regular-git # theme for refind
-      - spotify # music
-      - standardnotes-bin # notes
-      - typora-free # markdown editor/exporter
-      - vmware-horizon-client # remote desktop client
-      - vmware-horizon-smartcard # smartcard support
-      - xcursor-simp1e-catpuccin # cursor theme
-    state: present
+- name: Install packages
+  include_tasks: packages.yaml
 
 - name: Configure lightdm-gtk-greeter
   tags: pkg, config
